[gd_scene load_steps=4 format=3 uid="uid://c0eiiejfkk0ja"]

[ext_resource type="Script" path="res://scripts/ui/inventory_window.gd" id="1_d30n5"]
[ext_resource type="LabelSettings" uid="uid://byuxrryg8g8m6" path="res://scenes/ui/title_label_settings.tres" id="2_7340f"]
[ext_resource type="PackedScene" uid="uid://drn8urexlgpsv" path="res://scenes/ui/inventory/entity_panel_grid.tscn" id="3_cyime"]

[node name="InventoryWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d30n5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.219608, 0.607843, 1)

[node name="TitleBG" type="ColorRect" parent="."]
custom_minimum_size = Vector2(250, 67)
layout_mode = 1
anchors_preset = -1
offset_left = 27.0
offset_top = 31.0
offset_right = 277.0
offset_bottom = 98.0
color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="Title" type="Label" parent="TitleBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Inventory"
label_settings = ExtResource("2_7340f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemsBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.151
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 27.152
offset_right = -30.0
offset_bottom = -30.0
color = Color(0.1855, 0.245817, 0.35, 1)
metadata/_edit_use_anchors_ = true

[node name="EntityPanelGrid" parent="ItemsBG" instance=ExtResource("3_cyime")]
layout_mode = 1
metadata/_edit_lock_ = true

[connection signal="gui_input" from="ItemsBG" to="." method="_on_gui_input"]
